--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </header>
     <body>
     Test page
-      
+      <iframe src="http://192.168.1.58:3000/d-solo/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&from=1685052482683&to=1685074082683&panelId=11" width="450" height="200" frameborder="0"></iframe>
       
     </body>
 </html>
