--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <iframe src="http://192.168.1.58:3000/d-solo/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&panelId=12" width="450" height="200" frameborder="0"></iframe>
       <iframe src="http://192.168.1.58:3000/d-solo/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&panelId=12" width="450" height="200" frameborder="0"></iframe>
       http://192.168.1.58:3000/d/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&from=1685053314622&to=1685074914622&viewPanel=12
+      test2
     </body>
 </html>
