--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <body>
     Test page
       <iframe src="https://koskom1.vpnplus.to:3000/d-solo/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&from=1685052482683&to=1685074082683&panelId=11" width="450" height="200" frameborder="0"></iframe>
+      <br>
       <iframe src="https://koskom1.vpnplus.to:3000/d-solo/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&from=1685053220968&to=1685074820968&panelId=12" width="450" height="200" frameborder="0"></iframe>
+      <br>
       <iframe src="https://koskom1.vpnplus.to:3000/d-solo/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&panelId=12" width="450" height="200" frameborder="0"></iframe>
+      <br>
       <iframe src="https://koskom1.vpnplus.to:3000/d-solo/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&panelId=12" width="450" height="200" frameborder="0"></iframe>
+      <br>
+      <iframe src="https://koskom1.vpnplus.to:3000/d-solo/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&from=1685410092319&to=1685410392319&panelId=2" width="450" height="200" frameborder="0"></iframe>
+      <br>
       https://koskom1.vpnplus.to:3000/d/U4F4cF8Vz/burcin-tryout?orgId=1&refresh=5s&from=1685053314622&to=1685074914622&viewPanel=12
       test2
     </body>
